--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "frimousse": "^0.2.0",
     "lucide-react": "^0.510.0",
     "next": "^15.3.6",
+    "pocketbase": "^0.26.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.0"
