--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "seed:1dun": "node scripts/seed-1dun.mjs"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.13",
